--- a/src/DEMO_NON_RIGID.ipynb
+++ b/src/DEMO_NON_RIGID.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8-final"
+   "version": "3.8.8"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -27,8 +27,16 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "## Toy implementation of the Coherent Point Drift algorithm\n",
+    "This implementation is almost entirely based on the [probreg](https://github.com/neka-nat/probreg) repository"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,11 +86,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc9f3e2c7c0>"
+       "<matplotlib.legend.Legend at 0x7f25f2a5fbe0>"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 3
     }
    ],
    "source": [
@@ -248,11 +256,11 @@
     "This section implements the M step -- how does the GMM centroids should move to minimize the cost. The steps are :\n",
     "\n",
     "1. Solve for the new weights for the E step\n",
-    "$$ (\\mathbf{G}  + d(\\mathbf{P}\\mathbf{1})^{-1}\\lambda \\sigma^2 ) \\mathbf{W}  = d(\\mathbf{P}\\mathbf{1})^{-1}\\mathbf{PX} - Y $$ where $d(\\cdot)$ is the inverse diagonal matrix. this is the most expensive part of the CP algorithm\n",
+    "$$ (\\mathbf{G}  + d(\\mathbf{P}\\mathbf{1})^{-1}\\lambda \\sigma^2 ) \\mathbf{W}  = d(\\mathbf{P}\\mathbf{1})^{-1}\\mathbf{PX} - Y $$ where $d(\\cdot)^{-1}$ is the inverse diagonal matrix. this is the most expensive part of the CP algorithm\n",
     "\n",
     "2. Solve for the $N_{\\mathbf{P}} = \\sum_m^M \\sum_n^N p(m|\\mathbf{x_m})$ with the previous assignment matrix P $$N_\\mathbf{p} = \\mathbf{1}^T\\mathbf{P1}$$\n",
     "\n",
-    "3. Update the means of the GMM -- $$\\mathbf{T} = \\mathbf{Y} + \\mathbf{GW}$$\n",
+    "3. Update the means of the GMM -- $$\\mathbf{T} = \\mathbf{Y} + \\mathbf{GW}$$ $$\\mathbf{Y}^{new} = \\mathbf{T} + \\mathbf{Y}^{old}$$\n",
     "\n",
     "4. update the covariance of the mixture models -- This is very close to the M step of the standard GMM solution (e.g. see [this](https://github.com/nxdens/Depth-Excercise-1-GMM/blob/main/all_depth_ex_plots.ipynb))\n",
     "$$\\sigma^2 = \\frac{1}{3N_{\\mathbf{P}}} \\left[\\rm{tr}(\\mathbf{X}^Td(\\mathbf{P}\\mathbf{1})^{-1}\\mathbf{X}) \\right] - 2\\rm{tr}\\left[\\mathbf(PX)^TT\\right] + \\rm{tr}\\left[T^Td(\\mathbf{P}\\mathbf{1})^{-1}T \\right]$$"
